[FIX] CSS fixes for IE6. Plugin edit form positioning now absolute near top (was appearing at bottom of page) and tabcontent now not covering up the tabs.
git-svn-id: https://svn.code.sf.net/p/tikiwiki/code/branches/3.0@18734 b456876b-0849-0410-b77d-98878d47e9d5

--- a/css/ie6.css
+++ b/css/ie6.css
@@ -12,4 +12,7 @@ form.upform { width: 100px; }
 .tabactive,
 .tabinactive {position: static}
 	
-.tabcontent {z-index: none; position: static}
+.tabcontent {z-index: none; position: static; margin-top: 2.4ex;}
+
+/* IE6 doesn't do position fixed, override with absolute */
+.plugin-form-float { position: absolute; width: 90%; }
